# mtfind

./: CMakeLists.txt  README.md  mtfind.cpp
src/: wildcard_search.hpp
test/: CMakeLists.txt  test_wildcard_search.cpp
test/sample/: alphabet.txt
